# binutils_libfuzzer

./: .gitignore  README  configure  configure.ac
bfd/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  coffcode.h  config.bfd  configure  dwarf2.c  libtool  mach-o.c  opncls.c  peXXigen.c  vms-alpha.c
bfd/doc/: Makefile.in
bfd/po/: Makefile.in  SRC-POTFILES
binutils/: .Makefile.in.swp  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  arlex.l  configure  configure.ac  fuzzerreadelf.c  lex.yyarlex.c  libtool
binutils/doc/: Makefile.in
binutils/po/: Makefile.in
debian/: README.cross  changelog  control  control.in  dwp.1  ld.gold.1  libctf-nobfd0.symbols  libctf0.symbols  rules
debian/patches/: 128_ppc64_powerpc_biarch.patch  129_multiarch_libpath.patch  164_ld_doc_remove_xref.diff  CVE-2020-16592.patch  CVE-2021-3487.patch  CVE-2022-38533.patch  CVE-2023-25584.patch  CVE-2023-25585.patch  CVE-2023-25588.patch  binutils-no-development.diff  branch-no-development.diff  branch-updates.diff  mips64-default-n64.diff  series  z13_vector_alignment_hints.diff
debian/tests/: build  control
gas/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  libtool
gas/doc/: Makefile.in  as.info
gas/po/: Makefile.in
gold/: Makefile.am  Makefile.in  configure  configure.ac  options.cc  options.h
gprof/: Makefile.in  aclocal.m4  configure  gprof.info  gprof.texi  libtool
gprof/po/: Makefile.in
intl/: config.intl
ld/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  configure.tgt  genscripts.sh  ld.info  ld.texi  libtool
ld/po/: Makefile.in
ld/testsuite/config/: default.exp
ld/testsuite/ld-bootstrap/: bootstrap.exp
libctf/: Makefile.am  Makefile.in  configure  configure.ac  libtool
libiberty/: Makefile.in  configure  configure.ac
libiberty/libfuzzeriberty/: Makefile.in
opcodes/: ChangeLog  Makefile.in  aclocal.m4  configure  libtool
opcodes/po/: Makefile.in
zlib/: Makefile.am  Makefile.in  aclocal.m4  configure  libtool
